# qq

./: .coverage  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  LICENSE  README-DEV.md  README.md  pyproject.toml  pytest.ini  qq.spec
.github/workflows/: ci.yml  release.yml
scripts/installation_scripts/: qq-install-custom-rc.sh  qq-install.sh  qq-karolina-install.sh  qq-lumi-install.sh  qq-metacentrum-install.sh  qq-robox-install.sh  qq-set-scratch.sh  qq-sokar-install.sh
scripts/qq_scripts/: gmx-eta  multi-check  multi-kill  multi-submit
scripts/run_scripts/: qq_flex_md  qq_flex_re  qq_loop_md  qq_loop_re
src/: main.py
src/qq_lib/: __init__.py  archive.py  base.py  batch.py  clear.py  common.py  constants.py  env_vars.py  error.py  go.py  guard.py  info.py  job_type.py  kill.py  logger.py  loop.py  parse.py  pbs.py  present.py  properties.py  qq.py  resources.py  retry.py  run.py  size.py  states.py  submit.py  submit_factory.py  suffixes.py  supported_batch_systems.py  vbs.py
src/qq_lib/archive/: __init__.py  archiver.py
src/qq_lib/batch/: __init__.py  interface.py  pbs.py  vbs.py
src/qq_lib/cd/: __init__.py  cder.py  cli.py
src/qq_lib/clear/: __init__.py  clearer.py  cli.py
src/qq_lib/core/: __init__.py  click_format.py  common.py  config.py  constants.py  error.py  error_handlers.py  field_coupling.py  guard.py  logger.py  navigator.py  operator.py  (+2 more)
tests/: test_archive.py  test_batch.py  test_batch_interface.py  test_batch_pbs.py  test_batch_pbs_common.py  test_batch_pbs_job.py  test_batch_pbs_node.py  test_batch_pbs_pbs.py  test_batch_pbs_qqpbs.py  test_batch_pbs_queue.py  test_batch_slurm_common.py  test_batch_slurm_job.py  test_batch_slurm_node.py  test_batch_slurm_qqslurm.py  test_batch_slurm_qqslurmit4i.py  test_batch_slurm_queue.py  test_batch_slurm_slurm.py  test_batch_slurmit4i_slurm.py  test_batch_slurmlumi_slurm.py  test_batch_vbs.py  test_cd_cder.py  test_cd_cli.py  test_clear.py  test_common.py  test_core_common.py  test_core_config.py  test_core_error_handlers.py  test_core_field_coupling.py  test_core_guard.py  test_core_logger.py  test_core_navigator.py  test_core_operator.py  test_core_repeater.py  test_core_retryer.py  test_field_coupling.py  test_go.py  test_go_cli.py  test_go_goer.py  test_guard.py  test_info.py  (+45 more)
themes/light_terminal/: README.md  config.toml
themes/traffic_lights_theme/: README.md  config.toml
(+76 files in other folders)
