[project]
name = "qq-manager"
version = "0.1.0"
description = "Wrapper around PBS Pro and Slurm batch systems"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.2.1",
    "pyyaml>=6.0.2",
    "readchar>=4.2.1",
    "rich>=14.1.0",
]

[dependency-groups]
dev = [
    "nuitka>=2.7.16",
    "ruff>=0.13.0",
    "ty>=0.0.1a20",
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = ["E501"]
